# lyka-lang

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md
compiler/: CMakeLists.txt
examples/: array.rvn  arrays_dynamic.rv  arrays_static.rv  char.rvn  control_flow.rv  datatypes.rv  do-while-loop.rvn  do_while.rv  float.rvn  for-loop.rvn  for_in_loop.rvn  hello.rev  hello.rv  if-else.rvn  integer.rvn  loop.rvn  match.rv  output.rvn  string.rv  string.rvn  ternary.rvn  variables.rv
interpreter/: CMakeLists.txt
interpreter/common/: CMakeLists.txt  token.h
interpreter/evaluator/: CMakeLists.txt
interpreter/lexer/: CMakeLists.txt  lexer.c  lexer.h
interpreter/parser/: CMakeLists.txt
